05083 Improved toString implementation - replaced string concatenation with ToStringBuilder.
Signed-off-by: Ivan Malygin <ivan@swirldslabs.com>